--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /Obj/
 /UnityGenerated/
 /Library/
+/Logs/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
@@ -20,6 +21,7 @@ ExportedObj/
 *.user
 *.unityproj
 *.booproj
+*.vsconfig
 
 # ================= #
 # UnityVS generated #
