Removed User Settings

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /UnityGenerated/
 /Library/
 /Logs/
+/UserSettings/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
